# solana-todo-list

./: Anchor.toml  README.md
app/: package.json
app/app/: globals.css  layout.tsx  page.tsx
app/components/: AppWalletProvider.tsx
app/utils/: solana_todo_list.json
programs/solana_todo_list/: Cargo.toml
programs/solana_todo_list/src/: lib.rs
tests/: solana_todo_list.ts
